<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383B3D"
    tools:context=".CreateActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#383B3D"
        android:isScrollContainer="true"
        tools:context=".CreateActivity">

        <TextView
            android:id="@+id/CreateHeader"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/header_appearance"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text="@string/CreateHeader"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintGuide_begin="644dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/studyIDField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:importantForAutofill="no"
            android:paddingLeft="10sp"
            android:paddingTop="8sp"
            android:paddingRight="10sp"
            android:paddingBottom="8sp"
            android:text="@string/createIDLabel"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CreateHeader"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/currentStudyID"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:textAlignment="viewStart"
            android:textColor="@color/buttonColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toEndOf="@+id/studyIDField"
            app:layout_constraintTop_toBottomOf="@+id/CreateHeader" />

        <TextView
            android:id="@+id/studyNameField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:paddingLeft="10sp"
            android:paddingTop="8sp"
            android:paddingRight="10sp"
            android:paddingBottom="8sp"
            android:text="@string/createNameLabel"
            android:textColor="@color/whiteText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studyIDField"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/currentStudyName"
            android:layout_width="0dp"
            android:layout_height="80sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/buttonColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toEndOf="@+id/studyNameField"
            app:layout_constraintTop_toBottomOf="@+id/currentStudyID" />

        <EditText
            android:id="@+id/siteIdField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/siteIDHint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studyNameField"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/readingTypeField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/readingTypeHint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/siteIdField"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/readingUnitField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/readingUnitHint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readingTypeField"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/readingIDField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/readingIDHint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readingUnitField"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/readingValueField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/readingValueHint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readingIDField"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/readingDateField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/readingDateHint"
            android:importantForAutofill="no"
            android:inputType="date"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readingValueField"
            tools:targetApi="o" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_round"
            android:text="@string/submitButton"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readingDateField"
            tools:text="@string/submitButton" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="80sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_round"
            android:text="@string/cancelButton"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/submitButton"
            app:layout_constraintTop_toBottomOf="@+id/readingDateField"
            tools:text="@string/cancelButton" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
