<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383B3D"
    tools:context=".ImportActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        tools:context=".ImportActivity">

        <TextView
            android:id="@+id/CreateHeader"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/header_appearance"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text="@string/importHeader"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/importHeader" />


        <ListView
            android:id="@+id/readingsList"
            android:layout_width="match_parent"
            android:layout_height="492dp"
            android:smoothScrollbar="false"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CreateHeader"

            />

        <Button
            android:id="@+id/startButton"
            android:layout_width="165dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8sp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_round"
            android:text="@string/startButton"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readingsList" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="165dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_round"
            android:text="@string/endButton"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startButton"
            app:layout_constraintTop_toBottomOf="@+id/readingsList" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>